--- a/Nabutov_Kirill.mw
+++ b/Nabutov_Kirill.mw
@@ -2,11 +2,13 @@
 | изображение = Kirill Nabutov in Moscow 06-2015.jpg
 | описание изображения = Kirill Nabutov [[Moskv]]as, vn 2015 kezaku
 }}
-'''Kirill Viktorovič Nabutov''' ({{lang-ru|Кирилл Викторович Набутов}}; sünd. [[26. eloku]] [[1957]], [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venälaine]] sportkommentator, lehtezmez' da prodüser.
+'''Kirill Viktorovič Nabutov''' ({{lang-ru|Кирилл Викторович Набутов}}; sünd. [[26. eloku]] [[1957]], [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venälaine]] sportkommentator, lehtezmez', TV-vedai da prodüser.
 
-Vlpäi [[2009]] hän kommentiruib [[FK Zenit Piter|Zenitan]] matčoid [[100TV]]-telekalal.
+Kirill om [[Piterin valdkundaline universitet|Leningradan valdkundaližen universitetan]] vn 1979 pästnikan, openui sen žurnalistikan fakul'tetas. Opendusen jäl'ghe oli Leningradan televizijan sportkommentatoran.
 
-Hän kommentirui mugažo [[Tal'volimpiad-2010|vn 2010 Tal'volimpiadan]] i [[Kezaolimpiad-2012|vn 2012 Kezaolimpiadan]] avaidamižen.
+Mez' kommentirui [[Tal'volimpiad-2010|vn 2010 Tal'volimpiadan]] i [[Kezaolimpiad-2012|vn 2012 Kezaolimpiadan]] avaidamižen, radab [[Olimpižed vändod|Olimpižiden vändoiden]] TV-kommentatoran [[Kezaolimpiad-1980|Moskvaspäi]] zavodiden. Vlpäi [[2009]] hän kommentiruib [[FK Zenit Piter|Zenitan]] matčoid [[100TV]]-telekalal. Radoi erazvuiččiden TV-oigendusiden vedajaks erazvuiččil TV-kanalil.
+
+Nabutov om naižiš kahtenden kerdan, om kaht poigad.
 
 == Homaičendad ==
 <references/>
@@ -14,5 +16,7 @@ Hän kommentirui mugažo [[Tal'volimpiad-2010|vn 2010 Tal'volimpiadan]] i [[Keza
 {{stub}}
 [[Kategorii:Sportkommentatorad]]
 [[Kategorii:Venäman lehtezmehed]]
+[[Kategorii:Venäman TV-vedajad]]
 [[Kategorii:Lehtezmehed kirjamišton mödhe]]
+[[Kategorii:TV-vedajad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
