*Empty MediaWiki Message*

--- a/Nabutov_Kirill.mw
+++ b/Nabutov_Kirill.mw
@@ -2,7 +2,7 @@
 | изображение = Kirill Nabutov in Moscow 06-2015.jpg
 | описание изображения = Kirill Nabutov [[Moskv]]as, vn 2015 kezaku
 }}
-'''Kirill Viktorovič Nabutov''' ({{lang-ru|Кирилл Викторович Набутов}}; sünd. [[26. eloku]] [[1957]], [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[Venäma|venälaine]] sportkommentator, lehtezmez', TV-vedai da prodüser.
+'''Kirill Viktorovič Nabutov''' ({{lang-ru|Кирилл Викторович Набутов}}; sünd. [[16. eloku]] [[1957]], [[Piter|Leningrad]], [[Venäman NFST]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om [[venäma]]laine sportkommentator, lehtezmez', TV-vedai da prodüser.
 
 Kirill om [[Piterin valdkundaline universitet|Leningradan valdkundaližen universitetan]] vn 1979 pästnikan, openui sen žurnalistikan fakul'tetas. Opendusen jäl'ghe oli Leningradan televizijan sportkommentatoran.
 
