--- a/Poronaisk.mw
+++ b/Poronaisk.mw
@@ -1,9 +1,9 @@
 {{Eländpunkt
  | Nimi = Poronaisk<br />Поронайск
- | Lidnanznam = Coat of Arms of Poronaysk (Sakhalin oblast).png
- | Flag =
+ | Lidnanznam = Coat of Arms of Poronaysk (Sakhalinskaya oblast).svg
+ | Flag = Flag of Poronaysk.png
  | Lidnanznam text = Poronaiskan lidnanznam
- | Flag text =
+ | Flag text = Poronaiskan flag
  | Valdkund = Venäma
  | Eläjiden lugu = 15,311
  | Voz' = 2018
@@ -14,7 +14,7 @@
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-'''Poronaisk''' ({{lang-ru|Поронайск}}, {{lang-ja|ポロナイスク}} ''Poronaisku'', edel 1946 vot — {{lang-ja|敷香}} ''Sikuka'' augotižlibundanke ainan kelespäi) om [[Venäma]]n lidn da meriport [[Sahalinan agj]]an [[Sahalin]]-saren päivnouzmas. Se om [[Poronaiskan lidnümbrik]]on administrativine keskuz (edel 2006 vot — rajonan).
+'''Poronaisk''' ({{lang-ru|Поронайск}}, {{lang-ja|ポロナイスク}} ''Poronaisku'', edel 1946. vot — {{lang-ja|敷香}} ''Sikuka'' augotižlibundanke ainan kelespäi) om [[Venäma]]n lidn da meriport [[Sahalinan agj]]an [[Sahalin]]-saren päivnouzmas. Se om [[Poronaiskan lidnümbrik]]on administrativine keskuz (edel 2006. vot — rajonan).
 
 == Istorii ==
 Eländpunktan aluz om pandud kuti [[Venäman imperii|Venäman imperijan]] ''Tihmenevskii-kaičendsodapost'' igähižiden rahvahiden külidenno vn 1869 elokus. Šingotihe pästnuzil mehil katargaspäi, tehtihe jarmankoid. Vozil 1905−1945 oli [[Japonii|Japonijan]] palaks. Cellülozbumagaine tegim, cement i omblendfabrik radoiba 1990-nzihe vozihesai.
@@ -26,6 +26,16 @@ Lidn sijadase Poronai-jogensun oiktal randal tobjimalaz i Tünen valdmeren Ohots
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 16 120 ristitud, lidnümbrikon koume nelländest. Kaikiš suremb lidnan ristitišt oli 19 463 eläjad vl 1935 i 26 100 eläjad vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Tihonan Moskvalaižen jumalanpert' om pühästadud vl 2012.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Sakhalin Poronaisk.jpg|Poronaiskan lidnümbrikon kel'dtaho (2014)
+РЖД ТГ16-026 2016-06 депо Поронайск.jpg|Lämuzvedimed lidnan raudtedepos (2016)
+Sakhalin railway poronaysk 4.jpg|Poronaisk-päraudtestancijan sauvuz vl 2018
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://poronaisk.admsakhalin.ru/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''poronaisk.admsakhalin.ru'').] {{ref-ru}}
