--- a/Severokuril'sk.mw
+++ b/Severokuril'sk.mw
@@ -14,7 +14,8 @@
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-'''Severokuril'sk''' ({{lang-ru|Северо-Курильск}}, {{lang-ja|セベロクリリスク}} ''Seberokuririsku'', edel 1946 vot — ''Kasivabar'', {{lang-ja|柏原}} ''Kasivabara'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Paramušir]]-saren pohjoižes. Se om Severokuril'skan lidnümbrikon administrativine keskuz (edel 2006 vot — rajonan) da üks'jäine elänzoittud eländpunkt.
+[[Fail:Demis-Shumshu (Shumushu).png|thumb|left|250px|Lidnan geografine sijaduz saril]]
+'''Severokuril'sk''' ({{lang-ru|Северо-Курильск}}, {{lang-ja|セベロクリリスク}} ''Seberokuririsku'', edel 1946. vot — ''Kasivabar'', {{lang-ja|柏原}} ''Kasivabara'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Paramušir]]-saren pohjoižes. Se om Severokuril'skan lidnümbrikon administrativine keskuz (edel 2006. vot — rajonan) da üks'jäine elänzoittud eländpunkt.
 
 == Istorii ==
 Vspäi 1711 [[Venäman imperii|Venäman imperijan]] merimatkadajad tedoiziba [[Kurilan sared|Kurilan sarid]] [[Petropavlovsk Kamčatkal|Petropavlovskaspäi Kamčatkal]]. Vll 1875−1945 oli [[Japonii|Japonijan]] oficialižeks palaks. Japonijalaižed paniba ''Kasivabar-žilon'' alust [[ainalaižed|ainalaižiden]] ''Ottomai-külän'' sijha. Sirtihe ainalaižid [[Šikotan]]-sar'he. Nimitihe žilod «Ivaki»-tedoiduzlaivan kapitanan kanzannimen mödhe. [[Toine mail'man soda|Suren sodan]] aigan [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] aviacii bombardirui meriportad da sodalendimportad žilos vspäi 1943. Se sai lidnan statusad vl 1946, nimitihe Kurilan sariden mödhe.
@@ -30,6 +31,15 @@ Baikovo-sodažilo jäb kaikenaigaižeta ristitištota 20. voz'sadan lopuspäi, m
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 2 536 ristitud. Kaikiš suremb lidnan ristitišt oli 7 733 eläjad vl 1959 i 5 180 eläjad vl 1989.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+209 0943 SevKur heli View wiki.jpg|Lidnan nägu edel vn 1952 cunamid
+ЧайкиНадЗаводом.jpg|Kajaged kalategimen päl Paramušir-sarel (2021)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://sevkur.admsakhalin.ru/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''sevkur.admsakhalin.ru'').] {{ref-ru}}
