--- a/Agidel'.mw
+++ b/Agidel'.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Agidel'<br />Агидель <small>(ven.)</small><br />Ағиҙел <small>(bašk.)</small>
  | Lidnanznam = Coat of Arms of Agidel (Bashkortostan).png
- | Flag = Flag of Agidel (Bashkortostan).png
+ | Flag = Flag of Agidel.svg
  | Lidnanznam text = Agidelin lidnanznam
  | Flag text = Agidelin flag
  | Valdkund = Venäma
