([[c:GR|GR]])  [[File:Flag of Aleksandrovsk-Sakhalinsky rayon (Sakhalin oblast).png]] → [[File:Flag of Aleksandrovsk-Sakhalinsky rayon (Sakhalin oblast).svg]]

--- a/Aleksandrovsk_Sahalinal.mw
+++ b/Aleksandrovsk_Sahalinal.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Aleksandrovsk Sahalinal<br />Александровск-Сахалинский
  | Lidnanznam = Aleksandrovsk.png
- | Flag = Flag of Aleksandrovsk-Sakhalinsky rayon (Sakhalin oblast).png
+ | Flag = Flag of Aleksandrovsk-Sakhalinsky rayon (Sakhalin oblast).svg
  | Lidnanznam text = Aleksandrovskan Sahalinal lidnanznam
  | Flag text = Aleksandrovskan Sahalinal flag
  | Valdkund = Venäma
