([[c:GR|GR]])  [[File:Flag of Belize City.png]] → [[File:Flag of Belize City.svg]]

--- a/Beliz_(lidn).mw
+++ b/Beliz_(lidn).mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Beliz<br />Belize City
  | Lidnanznam = 
- | Flag = Flag of Belize City.png
+ | Flag = Flag of Belize City.svg
  | Lidnanznam text = 
  | Flag text = Beliz-lidnan znam
  | Valdkund = Beliz
