([[c:GR|GR]])  [[File:Flag of Fort Lauderdale, Florida.png]] → [[File:Flag of Fort Lauderdale, Florida.svg]]

--- a/Fort_Loderdeil.mw
+++ b/Fort_Loderdeil.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Fort Loderdeil<br />Fort Lauderdale
  | Lidnanznam = Seal of Fort Lauderdale, Florida.png
- | Flag = Flag of Fort Lauderdale, Florida.png
+ | Flag = Flag of Fort Lauderdale, Florida.svg
  | Lidnanznam text = Fort Loderdeilan lidnanznam
  | Flag text = Fort Loderdeilan flag
  | Valdkund = Amerikan Ühtenzoittud Valdkundad
