([[c:GR|GR]])  [[File:Flag of Domodedovo (Moscow oblast).png]] → [[File:Flag of Domodedovo.svg]]

--- a/Domodedovo_(lidn).mw
+++ b/Domodedovo_(lidn).mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Domodedovo<br />Домодедово
  | Lidnanznam = Coat of Arms of Domodedovo (Moscow oblast).png
- | Flag = Flag of Domodedovo (Moscow oblast).png
+ | Flag = Flag of Domodedovo.svg
  | Lidnanznam text = Domodedovon lidnanznam
  | Flag text = Domodedovon flag
  | Valdkund = Venäma
