([[c:GR|GR]])  [[File:Flag of Grozny (Chechnya).png]] → [[File:Flag of Grozny (Chechnya).svg]]

--- a/Groznii.mw
+++ b/Groznii.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Groznii<br />Грозный <small>(ven.)</small><br />Соьлжа-ГӀала <small>(čeč.)</small>
  | Lidnanznam = Coat of Arms of Grozny (Chechnya).svg
- | Flag = Flag of Grozny (Chechnya).png
+ | Flag = Flag of Grozny (Chechnya).svg
  | Lidnanznam text = Groznijan lidnanznam
  | Flag text = Groznijan flag
  | Valdkund = Venäma
