--- a/Ainsa-Sobrarbe.mw
+++ b/Ainsa-Sobrarbe.mw
@@ -2,20 +2,20 @@
  | Nimi = Ainsa Sobrarbe<br />Aínsa-Sobrarbe <small>(isp.)</small><br />L'Aínsa-Sobrarbe <small>(arag.)</small>
  | Lidnanznam = Escudo de l'Aínsa.svg
  | Flag = 
- | Lidnanznam text = Ainsa Sobrarben kundanznam
+ | Lidnanznam text = Ainsa-Sobrarben kundanznam
  | Flag text = 
  | Valdkund = Ispanii
- | Eläjiden lugu = 2,242
- | Voz' = 2012
+ | Eläjiden lugu = 2,312
+ | Voz' = 2021
  | Pind = 285
  | Fail = Aínsa.JPG
- | Pämez' = Hose Miguel' Čelis Peres
+ | Pämez' = Hose Migel' Čelis Peres
  | Telefonkod = +34-22907
- | Aigvö = tal'vel [[UTC]]+1.<br />kezal [[UTC]]+2
+ | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Ainsa Sobrarbe''' ({{lang-es|Aínsa-Sobrarbe}}, [[aragonan kel'|arag]].: ''L'Aínsa-Sobrarbe'') om [[municipalitet]] [[Ispanii|Ispanijas]], [[Uesk]]-provincijas.
+'''Ainsa Sobrarbe''' ({{lang-es|Aínsa-Sobrarbe}}, [[aragonan kel'|arag]].: ''L'Aínsa-Sobrarbe'') om [[municipalitet]] [[Ispanii|Ispanijan]] pohjoižpäivnouzmaižes avtonomižes [[Aragon]]-ühthižkundas, sen [[Uesk]]-provincijas.
 
-Pind om läz 285 km². Ainsa Sobrarben eläjiden lugu oli 2 242 ristitud 2012-ndes vodes.
+Vl 2012 kundan eläjiden lugu oli 2 242 ristitud.
 
 {{stub}}
 [[Kategorii:Ispanijan kundad]]
