--- a/Ainsa-Sobrarbe.mw
+++ b/Ainsa-Sobrarbe.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Ainsa Sobrarbe<br />Aínsa-Sobrarbe <small>(isp.)</small><br />L'Aínsa-Sobrarbe <small>(arag.)</small>
+ | Nimi = Ainsa-Sobrarbe<br />Aínsa-Sobrarbe
  | Lidnanznam = Escudo de l'Aínsa.svg
  | Flag = 
  | Lidnanznam text = Ainsa-Sobrarben kundanznam
@@ -9,11 +9,13 @@
  | Voz' = 2021
  | Pind = 285
  | Fail = Aínsa.JPG
- | Pämez' = Hose Migel' Čelis Peres
+ | Pämez' = Hose Migel' Čelis Peres<br/>(''José Miguel Cheliz Pérez'')
  | Telefonkod = +34-22907
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Ainsa Sobrarbe''' ({{lang-es|Aínsa-Sobrarbe}}, [[aragonan kel'|arag]].: ''L'Aínsa-Sobrarbe'') om [[municipalitet]] [[Ispanii|Ispanijan]] pohjoižpäivnouzmaižes avtonomižes [[Aragon]]-ühthižkundas, sen [[Uesk]]-provincijas.
+'''Ainsa-Sobrarbe''' ({{lang-es|Aínsa-Sobrarbe}}, [[aragonan kel'|arag]].: ''L'Aínsa-Sobrarbe'') om [[municipalitet]] [[Ispanii|Ispanijan]] avtonomižes [[Aragon]]-ühthižkundas, sen [[Uesk]]-provincijas.
+
+Kund sijadase valdkundan i ühthižkundan pohjoižpäivnouzmas, 569 m ü.m.t. keskmäižel korktusel.
 
 Vl 2012 kundan eläjiden lugu oli 2 242 ristitud.
 
