--- a/Ainsa-Sobrarbe.mw
+++ b/Ainsa-Sobrarbe.mw
@@ -9,15 +9,22 @@
  | Voz' = 2021
  | Pind = 285
  | Fail = Aínsa.JPG
- | Pämez' = Hose Migel' Čelis Peres<br/>(''José Miguel Cheliz Pérez'')
- | Telefonkod = +34-22907
+ | Pämez' = Enrike Puejo<br/>(2015−2019,<br/>''Enrique Pueyo'')
+ | Telefonkod = +34-974
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Ainsa-Sobrarbe''' ({{lang-es|Aínsa-Sobrarbe}}, [[aragonan kel'|arag]].: ''L'Aínsa-Sobrarbe'') om [[municipalitet]] [[Ispanii|Ispanijan]] avtonomižes [[Aragon]]-ühthižkundas, sen [[Uesk]]-provincijas.
+'''Ainsa-Sobrarbe''' ({{lang-es|Aínsa-Sobrarbe}}, [[aragonan kel'|arag]].: ''L'Aínsa-Sobrarbe'') om [[municipalitet]] [[Ispanii|Ispanijan]] avtonomižes [[Aragon]]-ühthižkundas, sen [[Uesk]]-provincijas. Administrativine keskuz om [[Ains]]-lidnut, kundan läz kaik ristitišt eläb siš.
 
 Kund sijadase valdkundan i ühthižkundan pohjoižpäivnouzmas, 569 m ü.m.t. keskmäižel korktusel.
 
 Vl 2012 kundan eläjiden lugu oli 2 242 ristitud.
+
+Edeline kundan pämez' om Hose Migel' Čelis Peres (2007−2015, ''José Miguel Cheliz Pérez'').
+
+== Homaičendad ==
+<references />
+
+{{Commons|Category:Aínsa-Sobrarbe}}
 
 {{stub}}
 [[Kategorii:Ispanijan kundad]]
