--- a/Ainsa-Sobrarbe.mw
+++ b/Ainsa-Sobrarbe.mw
@@ -7,23 +7,29 @@
  | Valdkund = Ispanii
  | Eläjiden lugu = 2,312
  | Voz' = 2021
- | Pind = 285
+ | Pind = 284,8
  | Fail = Aínsa.JPG
  | Pämez' = Enrike Puejo<br/>(2015−2019,<br/>''Enrique Pueyo'')
  | Telefonkod = +34-974
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Ainsa-Sobrarbe''' ({{lang-es|Aínsa-Sobrarbe}}, [[aragonan kel'|arag]].: ''L'Aínsa-Sobrarbe'') om [[municipalitet]] [[Ispanii|Ispanijan]] avtonomižes [[Aragon]]-ühthižkundas, sen [[Uesk]]-provincijas. Administrativine keskuz om [[Ains]]-lidnut, kundan läz kaik ristitišt eläb siš.
+'''Ainsa-Sobrarbe''' ({{lang-es|Aínsa-Sobrarbe}}, [[aragonan kel'|arag]].: ''L'Aínsa-Sobrarbe'') om [[municipalitet]] [[Ispanii|Ispanijan]] avtonomižes [[Aragon]]-ühthižkundas, sen [[Uesk]]-provincijas. Administrativine keskuz om [[Ains]]-lidnut.
 
+== Geografijan andmused ==
 Kund sijadase valdkundan i ühthižkundan pohjoižpäivnouzmas, 569 m ü.m.t. keskmäižel korktusel.
 
-Vl 2012 kundan eläjiden lugu oli 2 242 ristitud.
+Kaik 23 elänzoittud eländpunktad om kundas.
+
+== Eläjad ==
+Vl 2010 kundan eläjiden lugu oli 2 193 ristitud. Vspäi 1900 kaikiš suremb ristitišt oli 3 721 eläjad vl 1920, kaikiš penemb — 1 209 eläjad vl 1981, siš aigaspäi kundan ristitišt ližadub kaikenaigašti. Vl 2008 kundan 1561 eläjad 2095-späi elihe Ains-lidnudes.
 
 Edeline kundan pämez' om Hose Migel' Čelis Peres (2007−2015, ''José Miguel Cheliz Pérez'').
 
 == Homaičendad ==
 <references />
 
+== Irdkosketused ==
+* [http://www.ainsasobrarbe.com/ Kundan sait (''ainsasobrarbe.com'').] {{ref-es}}
 {{Commons|Category:Aínsa-Sobrarbe}}
 
 {{stub}}
