*Empty MediaWiki Message*

--- a/Ainsa-Sobrarbe.mw
+++ b/Ainsa-Sobrarbe.mw
@@ -29,7 +29,7 @@ Edeline kundan pämez' om Hose Migel' Čelis Peres (2007−2015, ''José Miguel 
 <references />
 
 == Irdkosketused ==
-* [http://www.ainsasobrarbe.com/ Kundan sait (''ainsasobrarbe.com'').] {{ref-es}}
+* [http://www.ainsa-sobrarbe.es/ Kundan sait (''ainsa-sobrarbe.es'').] {{ref-es}}
 {{Commons|Category:Aínsa-Sobrarbe}}
 
 {{stub}}
