--- a/Stol'berg_Kaarlo_Juho.mw
+++ b/Stol'berg_Kaarlo_Juho.mw
@@ -4,6 +4,13 @@
 }}
 '''Kaarlo Juho Stol'berg''' ({{lang-fi|Kaarlo Juho Ståhlberg}}, {{lang-sv|Carl Johan Ståhlberg}}; sünd. 28. viluku 1865, [[Suomussalmi]], [[Suomenman Sur' ruhtinazkund]], [[Venäman imperii]] — kol. 22. sügüz'ku 1952, [[Hel'sinki]], [[Suomenma]]) oli [[Suomenma|Suomenman Tazovaldkundan]] ezmäine prezident (1919, 26. heinku — 1925, 2. keväz'ku), [[ročilaižed|ročin]] augotižlibundanke.
 
+== Biografii ==
+Tuleban aigan politikanmez' oli sündnu pastoran kanzha. Zavodi opendust [[Laht (lidn)|Laht]]-lidnan keskškolas, no pereh sirdi [[Oulu]]hu tatan surman jäl'ghe jügedan rahaolendan tagut. Vl 1889 Kaarlo Juho sai oiktusen bakalavran arvod opendusen jäl'ghe Aleksandr-imperatoran universitetas (Hel'sinki), siš-žo vaumiči doktoranturad vl 1893 i kändihe docentaks jäl'ghižel vodel. [[Molembiden oiktusiden tedodoktor]]. Vll 1908−1918 oli universitetan administrativižen oiktusen professoran Hel'sinkiš.
+
+Vll 1898−1903 mez' radoi senatan sekretarin, vll 1914−1915 — parlamentan ezimehen. Vl 1917 oli Konstitucižen Nevondkundan ezimehen, sen aluzkundan pämet oli valdkundaližen sisteman sädand sanuden ripmatomut Suomenman täht. Prezidentan strokun jäl'ghe Stol'berg oli otnus politikha elon lophusai, ühtni prezidentan valičendoihe kandidataks kaks' kerdad.
+
+Mez' oli naižiš vspäi 1893, oti Irena Väl'bergad akaks, sündutihe kuz' last naimiželos. Vl 1917 ak koli, i Stol'berg oli naižiš kahten kerdan vspäi 1920.
+
 == Homaičendad ==
 <references/>
 
