--- a/Salelolog.mw
+++ b/Salelolog.mw
@@ -15,7 +15,7 @@
 }}
 '''Salelolog''' ([[samoan kel'|samoaks]]: ''Salelologa'') om [[Samoa]]n lidn [[Savaji]]-saren päivnouzmas. Se om valdkundan kahtenz' lidn, mülüb [[Faasaleleag]]-ümbrikho.
 
-Saren torguindan keskuz i meriport. Ehtatim ühtenzoitab lidnad lähiženke [[Upolu]]-sarenke ([[Mulifanua]]-žilo), severz'-se reisid päiväs. Maot-lendimport ({{lang-en|Maota}}) radab 4 km päivlaskmha lidnaspäi.
+Saren torguindan keskuz i meriport. Kirjišt i škol oma avaitud lidnas. Ehtatim ühtenzoitab lidnad lähiženke [[Upolu]]-sarenke ([[Mulifanua]]-žilo, sadas pol'tošt časud), severz'-se reisid päiväs. Maot-lendimport ({{lang-en|Maota}}) radab 4 km päivlaskmha lidnaspäi.
 
 {{Commons|Category:Salelologa}}
 
