--- a/Eländpunkt.mw
+++ b/Eländpunkt.mw
@@ -1,6 +1,7 @@
-[[Fail:Vinnitsy.jpg|thumb|right|250px|[[Vingl]], istorižešti vepsän eländpunkt]]
+[[Fail:Vinnitsy.jpg|thumb|right|250px|[[Vingl]], vepsän eländpunkt istorižešti]]
 '''Eländpunkt''' om mitte-se sija vai taho, kus [[ristit]]ud elädas, kaikenaigašti vai pordaigaližešti (kahtendes statjas voz'aigoidme, no joga vodel). Järgtaho tobjimalaz, kogoneb [[eländkodi]]špäi.
 
+== Toižendad ==
 Erazvuiččed eländpunktoiden toižendad oma ičeze suruden i eläjiden lugun mödhe:
 * [[Kordon (eländpunkt)|Kordon]]
 * [[Futor]]
@@ -14,7 +15,14 @@ Erazvuiččed eländpunktoiden toižendad oma ičeze suruden i eläjiden lugun m
 * [[Lidn]]
 da toižed.
 
-Kaikes mail'mas jagadas eländpunktoid kahteks kategorijaks: külähižed i lidnalaižed. Küläeländpunktan päerinend lidnalaižespäi om ristitišton enambusen otand maižandushe.
+Kaikes mail'mas jagadas eländpunktoid kahteks kategorijaks: külähižed i lidnalaižed. Küläeländpunktan päerinend lidnalaižespäi om ristitišton enambusen otand maižandushe, sen tagut erased küläd oleldas suremb mi lidnad eläjiden lugun mödhe.
+
+Territorijan üks' eländpunktoišpäi om sen administrativižeks keskuseks.
+
+== ÜRO:n ühtnend ==
+[[Ühtenzoittud Rahvahiden Organizacii|ÜRO:n]] Päassamblei vahvišti [[Mail'man Habitat-päiv]]än, oigendase vspäi 1986. Sil päiväl aigtegod oleskeldas, vedatadas tarkust eländpunktoiden problemoihe i ristituiden elämižen arvoimižihe.
+
+Tematine konferencii tegese mail'man ühtes suriš lidnoišpäi. Anttas kaht premijad parahimas paremboičijas projektas: Pohjoižen i Suvižen mapoliškoiden täht.
 
 == Kacu mugažo ==
 * [[Eländpunktad Venämas]]
