--- a/Suvisahalinsk.mw
+++ b/Suvisahalinsk.mw
@@ -14,12 +14,13 @@
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 ([[MSK]]+8)
 }}
+[[Fail:MapOfYuzhno-Sakhalinsk.png|thumb|left|250px|Lidnan kart (2020)]]
 '''Suvisahalinsk''' ({{lang-ru|Южно-Сахалинск}}, {{lang-ja|ユジノサハリンスク}} ''Judzinosaharinsku'') om lidn da lidnümbrik [[Venäma]]n päivnouzmas. Se om [[Sahalinan agj]]an administrativine keskuz da kaikiš suremb lidn.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1882 kuti ''Vladimirovk-külä'' ({{lang-ru|село Владимировка}}) elänzoitmaha tahod oigetud küksushe da katargha mehil. Vspäi 1905 se oli nimitadud ''Tojohar-žiloks'' [[Japonii|japonižen]] vägitungendan jäl'ghe. Žilo sai lidnan statusad vl 1915, i vodhe 1946 kezakun 4. päivhäsai ''Tojohar-lidn'' oli ({{lang-ja|豊原市}} ''Tojohara-si''). Sid' nimitihe nevondkundališt lidnad udes, geografižen sijadusen mödhe.
 
-Lidn šingotase sömtegimišton edheotandoil i elektroenergetikal, om sauvondmaterialiden tegimid. Agjan kalanpüdandan, kivivoin da gazan samižen kompanijoiden päfaterad sijadasoiš Suvisahalinskas.
+Suvisahalinsk šingotase sömtegimišton edheotandoil i elektroenergetikal, om sauvondmaterialiden tegimid. Agjan kalanpüdandan, kivivoin da gazan samižen kompanijoiden päfaterad sijadasoiš Suvisahalinskas.
 
 == Geografijan andmused ==
 Lidn sijadase [[Sahalin]]-saren suves, 50 m keskmäižel korktusel valdmeren pindan päl. Mägisel'g levineb päivnouzmpolehe lidnaspäi. Matkad [[Moskv]]hasai om 6680 km orhal (lendimel leten) vai 9400 km tedme. Voib olda 8-ballaižid [[manrehkaiduz|manrehkaidusid]] magnitudan mödhe.
@@ -30,6 +31,20 @@ Kümne küläd mülüdas lidnümbrikho Suvisahalinskan ližaks. Lidnümbrikon pi
 
 == Eläjad ==
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 181 728 ristitud, lidnümbrikon — 189 010 ristitud, agjan kaks' videndest. Kaikiš suremb lidnan i lidnümbrikon ristitišt om nügüd'. Vl 2018 206 140 ristitud elädas lidnümbrikos, 315 tuh. eläjid om lidnaglomeracijas.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Здание городской администрации..JPG|Lidnan administracijan sauvuz (2014)
+Yuzhno-Sakhalinsk Victory Day Parade (2019) 08.jpg|Raštvoiden kafedraline päjumalanpert' (ortodoksine hristanuskond) i sodaparad [[Vägestusen päiv]]äl, vn 2019 nägu
+Католическая церковь в Южно-Сахалинске. (2).JPG|[[Katoline jumalankodikund|Riman katoline]] jumalanpert', vn 2014 nägu
+Офис компании Exxon в Южно-Сахалинске.jpg|[[ExxonMobil]]-korporacijan «Exxon neftegas»-tütärkompanijan kontor vl 2011
+Здание "Сахинцентра" в Южно-Сахалинске.jpg|Rahvahidenkeskeižen azjaližen ühthižtön «Sahincentr»-keskuz vl 2011
+СахГУ.jpg|Sahalinan valdkundaline universitet, administrativine korpus (2019)
+Chekhov Center Yuzhno-Sakhalinsk April 2015 3.JPG|Sahalinan rahvahidenkeskeine teatraline keskuz A. Čehovan nimed (2015)
+Сити-Молл. Южно-Сахалинск. (2).JPG|«Siti-Moll»-torguindbobuštuzkeskuz vl 2014
+22090307285-yuzhno-sakhalinsk-airport-2015-russia.jpg|Suvisahalinsk-lendimportan terminalad vl 2015
+Железнодорожный вокзал..JPG|Suvisahalinsk-päraudtestancijan sauvuz vl 2014
+</gallery>
 
 == Homaičendad ==
 <references />
