--- a/Bilibino.mw
+++ b/Bilibino.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Bilibino<br/>Билибино <small>(ven.)</small><br />Билибин <small>(čukč.)</small>
- | Lidnanznam = Coat of Arms of Bilibino (Chukotka).png
+ | Lidnanznam = Coat of arms of Bilibino, Russia.png
  | Flag = 
  | Lidnanznam text = Bilibinon lidnanznam
  | Flag text = 
@@ -19,7 +19,7 @@
 == Istorii ==
 Eländpunktan aluz om pandud vl 1955 kuti radnikžilo samha [[kuld]]ad mägikombinatal. Vhesai 1956 nimitihe ''Karal'vaam:aks'' ([[venän kel'|ven]]. i {{lang-ckt|Каральваам}}, ''караль'' «pedroiden aidoitez» + ''ваам/веем'' «jogi») jogen mödhe. Udesnimitihe Jurii Bilibin-geologan kanzannimen mödhe, löuzi kuldregionad Koliman basseinas. Vl 1993 žilo sai lidnan statusad.
 
-Lidn šingotase kuldan samižel, sadas kaivuzmahtusel da ümbriratas sirdandküllästamižfabrikal penid löudmižsijid lidnas ümbri, mugažo lihamaidkombinat i maplodunfabrik (kazmuzhonuzedheotand i konservad) ratas. [[Bilibinon AES]] (48 MVt) lämbitab lidnad da varatoitab sidä elektroenergijal, sen vajehtuz dizel'stancijal planiruiše vspäi 2019.
+Bilibino šingotase kuldan samižel, sadas kaivuzmahtusel da ümbriratas sirdandküllästamižfabrikal penid löudmižsijid lidnas ümbri, mugažo lihamaidkombinat i maplodunfabrik (kazmuzhonuzedheotand i konservad) ratas. [[Bilibinon AES]] (48 MVt) lämbitab lidnad da varatoitab sidä elektroenergijal, sen vajehtuz dizel'stancijal planiruiše vspäi 2019.
 
 == Geografijan andmused ==
 Lidn sijadase Karal'vaam-jogen lanktendan sijas Sur' Keperveem-jogehe ([[Kolim]]an hurapol'ne bassein), 270 m ü.m.t. keskmäižel korktusel. Matkad [[Anadir'|Anadirihesai]] om 625 km suvipäivnouzmha. Lähembaine lidn om [[Pevek]] 240 km pohjoižpäivnouzmha orhal vai 360 km grunt- i tal'vteidme.
@@ -27,9 +27,20 @@ Lidn sijadase Karal'vaam-jogen lanktendan sijas Sur' Keperveem-jogehe ([[Kolim]]
 Keperveem-žilo mülüb lidnankundha Bilibinon ližaks, lendimport sijadase siš.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 5 506 ristitud, lidnankundan 5 829 ristitud, rajonan koume nelländest. Kaikiš suremb lidnan ristitišt oli 15 558 vl 1989. Vl 2017 kaik 5 560 ristitud elihe lidnankundas. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Serafim Sarovalaižen pühäpert' om saudud lidnas vodele 2009.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 5 506 ristitud, lidnankundan 5 829 ristitud, rajonan koume nelländest. Kaikiš suremb lidnan ristitišt oli 15 558 vl 1989. Vl 2017 kaik 5 560 ristitud elihe lidnankundas.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Serafim Sarovalaižen pühäpert' om saudud lidnas vodele 2009.
 
 Piterin tegimištoliž-ekonomižen kolledžan filial om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Bilibinsky District, Chukotka Autonomous Okrug, Russia - panoramio (70).jpg|Telekommunikacine «Orbita»-kaimdaistancii (2015)
+GOD - panoramio.jpg|Ph. Serafim Sarovalaižen jumalanpert', vn 2013 nägu
+Bilibino Nuclear Power Plant 2016-04 1.JPG|Bilibinon AES vn 2016 sulakus
+Bilibinsky District, Chukotka Autonomous Okrug, Russia - panoramio (33).jpg|Arktik-mikrorajonas (2014)
+Bilibinsky District, Chukotka Autonomous Okrug, Russia - panoramio (288).jpg|Lidnan ujundbassein vl 2013
+</gallery>
 
 == Homaičendad ==
 <references />
