--- a/Bilibino.mw
+++ b/Bilibino.mw
@@ -35,6 +35,7 @@ Piterin tegimištoliž-ekonomižen kolledžan filial om professionaližen opendu
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
+Bilibinsky District, Chukotka Autonomous Okrug, Russia - panoramio (195).jpg|Lidnan nägu vl 2015, administracijan sauvuz om nell'žiruine vauged siniženke alažirunke oiktalpäi
 Bilibinsky District, Chukotka Autonomous Okrug, Russia - panoramio (70).jpg|Telekommunikacine «Orbita»-kaimdaistancii (2015)
 GOD - panoramio.jpg|Ph. Serafim Sarovalaižen jumalanpert', vn 2013 nägu
 Bilibino Nuclear Power Plant 2016-04 1.JPG|Bilibinon AES vn 2016 sulakus
