--- a/.us.mw
+++ b/.us.mw
@@ -1,6 +1,6 @@
-'''.us''' om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] [[DNS|Internet-domen]]. Se om avaitud [[1985. voz'|1985]]-nden voden 15. päiväl uhokud<ref>[http://iana.org/domains/root/db/us.html IANA — .us Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>.
+'''.us''' om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] [[DNS|Internet-domen]]. Se om avaitud [[1985. voz'|1985]]-nden voden 15. päiväl uhokud<ref>[http://iana.org/domains/root/db/us.html IANA — .us Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. URL для регистрационных сервисов: [http://www.nic.us/ http://www.nic.us].
 
-Sponsirujad organizacijad: NeuStar Inc., Loudon Tech Center. Domen kävutase vähän, amerikalaižed ottas [[.com]]-domenad paksumba. Jogahižel štatal i territorijal kahtenden tazopindan domenad oma olmas, oz., Kolumbii-ümbrikon domen om .dic.us.
+Sponsirujad organizacijad: NeuStar Inc., Loudon Tech Center. Domen kävutase vähän, amerikalaižed ottas [[.com]]-domenad paksumba. Jogahižel štatal i territorijal kahtenden tazopindan domenad oma olmas, oz., Kolumbii-ümbrikon domen om .dc.us. Ottas .fed.us-domenad [[.gov]]-domenan al'ternativaks federaližen ohjastusen täht.
 
 == Homaičendad ==
 <references/>
