--- a/Spellbound_Tour_2009.mw
+++ b/Spellbound_Tour_2009.mw
@@ -1,10 +1,11 @@
-'''«[[Spellbound]] Tour 2009»''' om [[2009]]-žen voden [[Lacuna Coil]]:an koncertine tur.
-* Turan augotiž — [[4. heinku]] [[2009]], [[El' Paso (Tehas)|El' Paso]] ([[AÜV]])
-* Turan lopind — [[11. eloku]] [[2009]], [[Kolorado Springs]] ([[AÜV]])
+'''«Spellbound Tour 2009»''' om italižen [[Lacuna Coil]]-muzikgruppan [[2009]]-nden voden koncertine tur [[Amerikan Ühtenzoittud Valdkundad|AÜV:oidme]] [[Spellbound]]-singlan promotiruindan täht. Se oli gruppan ezmäine amerikaine koncertine tur kahtes vodes.
+* Turan augotiž — [[4. heinku]] [[2009]], [[El' Paso (Tehas)|El' Paso]] (AÜV)
+* Turan lopind — [[11. eloku]] [[2009]], [[Kolorado Springs]] (AÜV)
 
-Gruppan hulduteses oli [[Kill Hannah]]-, [[Seventh Void]]- da [[Dommin]]-kollektivad.
-{{stub}}
+Gruppan hulduteses oliba [[Kill Hannah]]-, [[Seventh Void]]- da [[Dommin]]-kollektivad.
+
 {{Lacuna Coil}}
 
+{{stub}}
 [[Kategorii:Lacuna Coil:an koncertižed turad]]
 [[Kategorii:Koncertižed turad kirjamišton mödhe]]
