([[c:GR|GR]])  [[File:Holon COA.png]] → [[File:Coat of arms of Holon.svg]]

--- a/Holon_(lidn,_Izrail').mw
+++ b/Holon_(lidn,_Izrail').mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Holon<br />חוֹלוֹן
- | Lidnanznam = Holon COA.png
+ | Lidnanznam = Coat of arms of Holon.svg
  | Flag = Flag of Holon Version3.svg
  | Lidnanznam text = Holonan lidnanznam
  | Flag text = Holonan flag
