--- a/TEM18.mw
+++ b/TEM18.mw
@@ -1,9 +1,11 @@
 [[Fail:Diesel locomotives TEM18-017 .jpg|thumb|right|250px|TEM18]]
-'''TEM18''' ({{lang-ru|ТЭМ18}}) om [[Venäma|venämalaine]] [[lämuzvedim]].
+'''TEM18''' ({{lang-ru|ТЭМ18}}) om [[Venäma|venämalaine]] [[lämuzvedim]] elektroajaimenke.
 
 Model' pästtase [[Bränsk]]an mašinansauvomižen tegimel vspäi 1992 tähäsai. Lämuzvedim om tarbhaine manevruindan, vedandan i kebnan magistraližen radon täht ühthižil raudteil i tegimišton edheotandoil.
 
-Kaik om pästtud 1796 mašinad vn 2020 elokule. Likutim kävutab dizel'poltust.
+Kaik om pästtud 1796 mašinad vn 2020 elokule. Likutim om nell'taktine 1PD-1A, kävutab dizel'poltust.
+
+Tegim sauvob necen serijan lämuzvedimid erazvuiččiš modifikacijoiš, 1435..1676 mm raižun täht, venon i tropikoiden klimatan täht.
 
 == Tehnižed andmused ==
 * Värtmuziden formul — 3<sub>О</sub>−3<sub>О</sub>.
