--- a/Holon_(lidn,_Izrail').mw
+++ b/Holon_(lidn,_Izrail').mw
@@ -15,8 +15,12 @@
 }}
 '''Holon''' ({{lang-he|חוֹלוֹן}}) om lidn [[Izrail'|Izrailin]] keskuzpalas. Se om [[Tel' Aviv]]an suvine ezilidn, mülüb [[Tel' Avivan ümbrik|sen ümbrikho]].
 
-Eländpunktan aluz om pandud vl 1937 viden žilon ühtenzoitusel. Se sai lidnan statusad vl 1950. Holon šingotase kahtendel surtte tegimišton zonal valdkundas.
+== Istorii ==
+Eländpunktan aluz om pandud vl 1937 viden žilon ühtenzoitusel. Se sai lidnan statusad vl 1950.
 
+Holon šingotase kahtendel surtte tegimišton zonal valdkundas.
+
+== Geografijan andmused ==
 Lidn sijadase kahtes kilometras [[Keskmeri|Keskmeren]] randaspäi, 20 m ü.m.t. keskmäižel korktusel.
 
 Vl 2011 eläjiden lugu oli 182 575 ristitud. Valdkundan maižanduzakademii om avaitud lidnas. Om äi lapsenturizman aluzkundoid.
