--- a/Pevek.mw
+++ b/Pevek.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Pevek<br/>Певек <small>(ven.)</small><br />Пээкин <small>(čuk.)</small>
- | Lidnanznam = Coat of Arms of Pevek (Chukotka).png
+ | Lidnanznam = Symbol-of-pevek.png
  | Flag = 
  | Lidnanznam text = Pevekan lidnanznam
  | Flag text = 
@@ -8,13 +8,14 @@
  | Eläjiden lugu = 4,547
  | Voz' = 2017
  | Pind = 60.32
- | Fail = View of Pevek from the south.jpg
+ | Fail = The-view-on-pevek-from-paakinay-knoll.jpg
  | Pämez' = Nikolai Levanov (2016—)<ref>[https://go-pevek.ru/все-новости/состоялось-заседание-30-сессии-совета-депутатов Состоялось заседание 30 сессии Совета депутатов городского округа Певек 5 созыва (Pevek-lidnümbrikon 5. kucundan Ezitajiden Nevondkundan 30. sessijan ištund tegihe) // Uzištused 14.06.2016. — ''Go-pevek.ru''.] {{ref-ru}}</ref>
  | Telefonkod = +7-42737-xx-xxx
  | Avtokod = 87
  | Aigvö = [[UTC]]+12 ([[MSK]]+9)
 }}
-'''Певек''' ({{lang-ru|Певек}}, {{lang-ckt|Пээкин}}) om [[Venäma]]n lidn da lidnümbrik [[Čukotkan avtonomine ümbrik|Čukotkan avtonomižen ümbrikon]] pohjoižes.
+[[Fail:MapOfPevek.png|thumb|left|250px|Lidnan kart (2020)]]
+'''Певек''' ({{lang-ru|Певек}}, {{lang-ckt|Пээкин / Пээк}}) om [[Venäma]]n lidn da lidnümbrik [[Čukotkan avtonomine ümbrik|Čukotkan avtonomižen ümbrikon]] pohjoižes.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1933 kuti port [[Pohjoine merite|Pohjoižel meritel]] da žilo samha [[tin]]ad. Möhemba löuzihe tinan toižid sijid i [[kuld]]an sijid. Žilo tegihe lidnanvuiččeks žiloks peitkäskusen mödhe vl 1951. Lidnanvuitte žilo sai lidnan statusad vn 1967 6. päiväl sulakud.
@@ -41,6 +42,15 @@ Lihamaidkombinat om lidnas. [[Čaunan LEK]] lämbitab lidnad da varatoitab sidä
 Civiline «Pevek»-lendimport (''ПЕВ/PWE'') sijadase Apapel'gino-žilos ({{lang-ckt|Апывэлгын}}) kaikenaigaižeta ristitištota, 15 kilometras pohjoižpäivnouzmha lidnaspäi. Sišpäi tehtas reisid [[Moskv]]ha, [[Magadan]]ha da [[Čukotkan avtonomine ümbrik|Čukotkadme]]. Sen ližaks, se om varalendimport rahvahidenkeskeižiden reisiden täht Pohjoižes Amerikaspäi Azijan maihe.
 
 Meriport sijadase lidnan randištol, se om federaliženke znamoičendanke, kävutase kezal kut sodamerivägiden štab Päivnouzmaižes [[Arktik]]as i [[kivihil'|kivihilen]] tomižen täht [[Saha Tazovaldkund|Jakutijaspäi]] [[Kitai]]he. Sen valdmad oma vanhtunuded.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Певек, 5-ый микрорайон.jpg|Videnz' mikrorajon (2003)
+Гостевой домик - panoramio.jpg|Lidnan administracijan adivpert' vl 2004
+Pevek-5.jpg|Demontiruidud skul'pturiden tematine puišt (2010)
+Airport Apapelgino.jpg|Apapel'gino-lendimport vl 2003
+Причал порта Певек.jpg|Pevek-meriportan valdmad vl 2011
+</gallery>
 
 == Tetabad sündnuded ==
 * [[Mezencev Aleksandr Valentinovič|Aleksandr Mezencev]] (1951−2015) — oli Nevondkundaližen Ühtištusen i Venäman kinon da teatran akt'or.
