--- a/Pevek.mw
+++ b/Pevek.mw
@@ -9,7 +9,7 @@
  | Voz' = 2017
  | Pind = 60.32
  | Fail = The-view-on-pevek-from-paakinay-knoll.jpg
- | Pämez' = Nikolai Levanov (2016—)<ref>[https://go-pevek.ru/все-новости/состоялось-заседание-30-сессии-совета-депутатов Состоялось заседание 30 сессии Совета депутатов городского округа Певек 5 созыва (Pevek-lidnümbrikon 5. kucundan Ezitajiden Nevondkundan 30. sessijan ištund tegihe) // Uzištused 14.06.2016. — ''Go-pevek.ru''.] {{ref-ru}}</ref>
+ | Pämez' = Nikolai Levanov<br />(2016—)<ref>[https://go-pevek.ru/все-новости/состоялось-заседание-30-сессии-совета-депутатов Состоялось заседание 30 сессии Совета депутатов городского округа Певек 5 созыва (Pevek-lidnümbrikon 5. kucundan Ezitajiden Nevondkundan 30. sessijan ištund tegihe) // Uzištused 14.06.2016. — ''Go-pevek.ru''.] {{ref-ru}}</ref>
  | Telefonkod = +7-42737-xx-xxx
  | Avtokod = 87
  | Aigvö = [[UTC]]+12 ([[MSK]]+9)
@@ -18,14 +18,14 @@
 '''Певек''' ({{lang-ru|Певек}}, {{lang-ckt|Пээкин / Пээк}}) om [[Venäma]]n lidn da lidnümbrik [[Čukotkan avtonomine ümbrik|Čukotkan avtonomižen ümbrikon]] pohjoižes.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1933 kuti port [[Pohjoine merite|Pohjoižel meritel]] da žilo samha [[tin]]ad. Möhemba löuzihe tinan toižid sijid i [[kuld]]an sijid. Žilo tegihe lidnanvuiččeks žiloks peitkäskusen mödhe vl 1951. Lidnanvuitte žilo sai lidnan statusad vn 1967 6. päiväl sulakud.
+Eländpunktan aluz om pandud vl 1933 kuti port [[Pohjoine merite|Pohjoižel meritel]] da žilo samha [[tin]]ad. Möhemba löuzihe tinan toižid sijid i [[kuld]]an sijid. Kätihe žilod lidnanvuiččeks peitkäskusen mödhe vl 1951. Lidnanvuitte žilo sai lidnan statusad vn 1967 6. päiväl sulakud.
 
 Vspäi 2016 (1. viluku) enččen Čaunan rajonan kundad da kundoidenkeskeine territorii mülüdas Pevekan lidnümbrikho.
 
 == Geografijan andmused ==
 Lidn sijadase lidnümbrikon pohjoižes, ühtennimižen sal'men päivnouzmaižel randal, [[Jävaldmeri|Jävaldmeren]] [[Päivnouzmaine Sibirin meri|Päivnouzmaižen Sibirin meren]] suvirandal. Sal'm ühtenzoitab merod sen Čaunan lahtenke. Matkad [[Anadir'|Anadirihesai]] om 640 km suvipäivnouzmha.
 
-Klimat om meren [[subarktine vö|subarktine]]. Kova suvitullei mägipautkilpäi («fön») voib puhuškata äkkid, se lujeneb 40 metrad sekundpigudehesai ühtes časus i voib puhuda severz'-se päivesid.
+Klimat om meren [[subarktine vö|subarktine]]. Voden keskmäine lämuz om −9,5 C°. Kova suvitullei mägipautkilpäi («fön») voib puhuškata äkkid, se lujeneb 40 metrad sekundpigudehesai ühtes časus i voib puhuda severz'-se päivesid.
 
 Nell' elanzoittud küläd (1 053 rist. vl 2015) da 7 tactud eländpunktad mülüdas lidnümbrikho Pevekan ližaks. Lidnümbrikon pind om 58 100 km², ristitišt — 5 551 eläjad (vl 2017).
 
@@ -37,7 +37,8 @@ Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 4 162 risti
 Vozil 1949−1957 türmatud ristituiden kolonii sijazihe lidnas. [[Uran (himine element)|Uranfabrik]] oli lidnas, 1950-nzil vozil sauptihe sidä. Sen jändusiden varažom om avoin taivhale, sijadase 18 km päivnouzmha lidnaspäi.
 
 == Ižanduz da transport ==
-Lihamaidkombinat om lidnas. [[Čaunan LEK]] lämbitab lidnad da varatoitab sidä elektroenergijal.
+[[Fail:Чаунская ТЭЦ.jpg|thumb|right|250px|Čaunan LEK vl 2004]]
+Lihamaidkombinat radab lidnas, geotedištelendan edheotand, kuldan samižen koume edheotandad, meteostancii i «Vrangelän sar'»-kel'dtahon administracii. [[Čaunan LEK]] lämbitab lidnad da varatoitab sidä elektroenergijal, planiruidas udištada sidä täuzin vspäi 2026. Ujui atomine lämuzelektrostancii radab lidnanno vspäi 2020, se vajehtaškandeb Bilibinon AES:ad aigan mändes.
 
 Civiline «Pevek»-lendimport (''ПЕВ/PWE'') sijadase Apapel'gino-žilos ({{lang-ckt|Апывэлгын}}) kaikenaigaižeta ristitištota, 15 kilometras pohjoižpäivnouzmha lidnaspäi. Sišpäi tehtas reisid [[Moskv]]ha, [[Magadan]]ha da [[Čukotkan avtonomine ümbrik|Čukotkadme]]. Sen ližaks, se om varalendimport rahvahidenkeskeižiden reisiden täht Pohjoižes Amerikaspäi Azijan maihe.
 
@@ -45,11 +46,11 @@ Meriport sijadase lidnan randištol, se om federaliženke znamoičendanke, kävu
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
-Певек, 5-ый микрорайон.jpg|Videnz' mikrorajon (2003)
 Гостевой домик - panoramio.jpg|Lidnan administracijan adivpert' vl 2004
 Pevek-5.jpg|Demontiruidud skul'pturiden tematine puišt (2010)
-Airport Apapelgino.jpg|Apapel'gino-lendimport vl 2003
 Причал порта Певек.jpg|Pevek-meriportan valdmad vl 2011
+Певек, 5-ый микрорайон.jpg|Videnz' mikrorajon (2003)
+Airport Apapelgino.jpg|Apapel'gino-lendimport vl 2003
 </gallery>
 
 == Tetabad sündnuded ==
