*Empty MediaWiki Message*

--- a/Pevek.mw
+++ b/Pevek.mw
@@ -38,7 +38,7 @@ Vozil 1949−1957 türmatud ristituiden kolonii sijazihe lidnas. [[Uran (himine 
 
 == Ižanduz da transport ==
 [[Fail:Чаунская ТЭЦ.jpg|thumb|right|250px|Čaunan LEK vl 2004]]
-Lihamaidkombinat radab lidnas, geotedištelendan edheotand, kuldan samižen koume edheotandad, meteostancii i «Vrangelän sar'»-kel'dtahon administracii. [[Čaunan LEK]] lämbitab lidnad da varatoitab sidä elektroenergijal, planiruidas udištada sidä täuzin vspäi 2026. Ujui atomine lämuzelektrostancii radab lidnanno vspäi 2020, se vajehtaškandeb Bilibinon AES:ad aigan mändes.
+Lihamaidkombinat radab lidnas, geotedištelendan edheotand, kuldan samižen koume edheotandad, avtotesauvondan kompanii, meteostancii i «Vrangelän sar'»-kel'dtahon administracii. [[Čaunan LEK]] lämbitab lidnad da varatoitab sidä elektroenergijal, planiruidas udištada sidä täuzin vspäi 2026. Ujui atomine lämuzelektrostancii radab lidnanno vspäi 2020, se vajehtaškandeb Bilibinon AES:ad aigan mändes.
 
 Civiline «Pevek»-lendimport (''ПЕВ/PWE'') sijadase Apapel'gino-žilos ({{lang-ckt|Апывэлгын}}) kaikenaigaižeta ristitištota, 15 kilometras pohjoižpäivnouzmha lidnaspäi. Sišpäi tehtas reisid [[Moskv]]ha, [[Magadan]]ha da [[Čukotkan avtonomine ümbrik|Čukotkadme]]. Sen ližaks, se om varalendimport rahvahidenkeskeižiden reisiden täht Pohjoižes Amerikaspäi Azijan maihe.
 
