--- a/Anadir'.mw
+++ b/Anadir'.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = Anadir'<br />Анадырь <small>(ven.)</small><br />Йъаайваам <small>(čukč.)</small>
+ | Nimi = Anadir'<br />Анадырь <small>(ven.)</small><br />Кагыргын <small>(čukč.)</small>
  | Lidnanznam = Coat of Arms of Anadyr (Chukotka).png
  | Flag = Flag of Anadyr (Chukotka).svg
  | Lidnanznam text = Anadirin lidnanznam
@@ -9,21 +9,25 @@
  | Voz' = 2017
  | Pind = 20
  | Fail = Анадырь коллаж.jpg
- | Pämez' = Il'ja Davidenko (2014—)
+ | Pämez' = Il'ja Davidenko<br />(2014—)
  | Telefonkod = +7-42722-xx-xxx
  | Avtokod = 87
  | Aigvö = [[UTC]]+12 ([[MSK]]+9)
 }}
-[[Fail:Anadyr bus.jpg|thumb|left|250px|Ird Anadiriš.]]
-'''Anadir'''' ({{lang-ru|Анадырь}}, {{lang-ckt|Йъаайваам}}, sijaline ''Кагыргын'' «jogensu») om lidn, meriport da lidnümbrik [[Venäma]]n pohjoižpäivnouzmas. Se om [[Čukotkan avtonomine ümbrik|Čukotkan avtonomižen ümbrikon]] administrativine keskuz, mugažo [[Anadirin rajon]]an administrativižeks keskuseks (ei mülü sihe).
+[[Fail:Map of Anadyr.svg|thumb|left|250px|Lidnan kart (2016)]]
+'''Anadir'''' ({{lang-ru|Анадырь}}, {{lang-ckt|Кагыргын}} [kɑɣərˈɣən] «jogensu» vai ''Въэӈын'' «tulend», «su») om lidn, meriport da lidnümbrik [[Venäma]]n pohjoižpäivnouzmas. Se om valdkundan kaikiš päivnouzmaižemb lidn, [[Čukotkan avtonomine ümbrik|Čukotkan avtonomižen ümbrikon]] administrativine keskuz, mugažo [[Anadirin rajon]]an administrativižeks keskuseks (ei mülü sihe).
+
+== Etimologii ==
+Pojav ''Anadirsk''-nimituz mainitase 17. voz'sadan kesken lidnusel, ''Onandir''' — čukačuiden jogel, om parallelid [[jukagiran kel'|jukagiran]] ''enu-en / anu-an / anu-on''-sanantüvenke «jogi». Anadir'-jogen čukačun ''Йъаайваам''-nimituz kändase «kajagiden jogi».
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1889 elänzoitmaha tahondad Venälaižen imperijan ohjastusen käskön mödhe. Edel 1923 vot sen nimi oli '''Novomariinsk'''. Vspäi 1965 om lidnan statusanke.
+Eländpunktan aluz om pandud vl 1889 elänzoitmaha tahondad [[Venäman imperii|Venälaižen imperijan]] ohjastusen käskön mödhe. Edel 1923. vot žilon nimi oli '''Novomariinsk'''. Vodel 1965 se sai lidnan statusad.
 
-Pertišton tobj pala om saudud vajil. Sadas [[kuld]]ad da [[kivihil'|kivihil't]] lidnan ümbrištos.
+Anadir' šingotase kalanümbriradajal tegimel, meriportal, Anadirin LEK i tulleielektrostancii ratas. Sadas [[kuld]]ad da [[kivihil'|kivihil't]] lidnan ümbrištos. Pertišton tobj pala om saudud vajil.
 
 == Geografijan andmused ==
-Lidn sijadase [[Anadir' (jogi)|ühtennimižen jogen]] oiktal randal, igähižen rougun zonas. Jogi lankteb vilun [[Beringan meri|Beringan meren]] Anadirin lahthe. Matkad [[Moskv]]hasai om 6192 km päivlaskmha orhal.
+[[Fail:MapOfAnadyr.png|thumb|left|250px|Lidnan ümbrišt (2019)]]
+Lidn sijadase [[Anadir' (jogi)|ühtennimižen jogen]] oiktal randal, igähižen rougun zonas i röunmazonas. Jogi lankteb vilun [[Beringan meri|Beringan meren]] Anadirin lahthe. Matkad [[Moskv]]hasai om 6192 km päivlaskmha orhal.
 
 Klimat om [[subarktine vö|subarktine]] meren. Voden keskmäine lämuz om –6,9 C°. Paneb sadegid 346 mm vodes, om penemb niid keväz'kus-semendkus (13..23 mm kus).
 
@@ -33,6 +37,18 @@ Tavaivaam-külä mülüb lidnümbrikho mugažo (488 rist. vl 2017).
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 13 045 ristitud. Kaikiš suremb ristitišt oli 17 094 eläjad vl 1989.
 
 Harvad avtobusad oma kundaližeks transportaks lidnas da sen ümbrištos. Lendimport sijadase 23 km lidnaspäi avtotedme [[Kivihil'varad]]-žilos, limanan vastrandal.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Anadyr harbour6.jpg|Lidnan pertišton lähine nägu (2004)
+Свято-Троицкий собор в Анадыре.jpg|Pühän Stroican kafedraline päjumalanpert', vn 2013 nägu
+Anadyr harbour1.jpg|Spasan Toižetamižen jumalanpert', vn 2004 nägu
+Anadyr child creativity palace.jpg|Lapsiden sädamižen pert'kulu (2004)
+Anadyr bus.jpg|Rul'titeginan ird Anadiriš (2004)
+Анадырский морпорт.png|Anadirin meriport vl 2011
+Anadyr-Ugolny-August2006.jpg|Ugol'nii-lendimport vl 2006
+Ice road across Anadyrsky Liman.jpg|Jäte limanadme, 27. sulaku 2011
+</gallery>
 
 == Tetabad sündnuded ==
 * [[Dopkünas Vadim|Vadim Dopkünas]] (sünd. 1940) — Vaugedvenäman teatranmez'.
